--- a/打砖块.html
+++ b/打砖块.html
@@ -8,7 +8,7 @@
     <style>
         canvas {
             border: 1px black solid;
-            background-image: url(./wicher.png);
+            background-image: url(./png/wicher.png);
             background-size: 100% 100%;
         }
     </style>
