--- a/打砖块.html
+++ b/打砖块.html
@@ -16,6 +16,8 @@
     <script src="./ball.js"></script>
     <script src="./paddle.js"></script>
     <script src="./block.js"></script>
+    <script src="./utils.js"></script>
+
 </head>
 
 <body>
@@ -29,18 +31,6 @@
             return img
         }
 
-        var recIntersects = function (a, b) {
-            // var o = a
-            // if (b.y > o.y && b.y < o.y + o.image.height) {
-            //     if (b.x > o.x && b.x < o.x + o.image.width) {
-            //         log("相撞")
-            //         return true
-            //     }
-            // }
-            // return false
-            no = a.y + a.image.height < b.y || a.x + a.image.width < b.x || b.y + b.image.height < a.y || b.x + b.image.width < a.x
-            return !no
-        }
 
 
         var __main = function () {
