--- a/打砖块.html
+++ b/打砖块.html
@@ -48,7 +48,7 @@
             var paddle = Paddle()
             var ball = Ball()
             var game = Game(45)
-            var blocks = loadLevel(2)
+            // var blocks = loadLevel(2)
             var paused = false
             game.registerAction("a", function () {
                 paddle.moveLeft()
@@ -61,10 +61,12 @@
             })
 
             window.addEventListener("keydown", function(event) {
+                var k = event.key
                 if (event.key == "p") {
                     paused = !paused
-                }
-            })
+                } else if ("1234567".includes(k)) {
+                    blocks = loadLevel(Number(k))
+            }})
 
             game.update = function () {
                 if (paused) {
