--- a/打砖块.html
+++ b/打砖块.html
@@ -25,7 +25,12 @@
     <canvas id="id-canvas" width="400" height="300"></canvas>
     <hr>
     <input type="range" id="id-input-speed" value="1">
+    <hr>
+    <div>
+        <textarea name="" id="id-text-log" cols="50" rows="20"></textarea>
+    </div>
     <script src="./main.js"></script>
+
 </body>
 
 </html>
