场景抽象, 恶心异步

--- a/打砖块.html
+++ b/打砖块.html
@@ -18,6 +18,9 @@
     <script src="./block.js"></script>
     <script src="./utils.js"></script>
     <script src="./level.js"></script>
+    <script src="./scene.js"></script>
+    <script src="./scene_end.js"></script>
+
 
 </head>
 
