--- a/打砖块.html
+++ b/打砖块.html
@@ -12,14 +12,14 @@
             background-size: 100% 100%;
         }
     </style>
-    <script src="./game.js"></script>
-    <script src="./ball.js"></script>
-    <script src="./paddle.js"></script>
-    <script src="./block.js"></script>
-    <script src="./utils.js"></script>
+    <script src="./game/game.js"></script>
+    <script src="./scene_main/ball.js"></script>
+    <script src="./scene_main/paddle.js"></script>
+    <script src="./scene_main/block.js"></script>
+    <script src="./game/utils.js"></script>
     <script src="./level.js"></script>
-    <script src="./scene.js"></script>
-    <script src="./scene_end.js"></script>
+    <script src="./scene_main/scene.js"></script>
+    <script src="./scene_end/scene_end.js"></script>
 
 
 </head>
