场景文件夹

--- a/打砖块.html
+++ b/打砖块.html
@@ -15,11 +15,11 @@
     <script src="./level.js"></script>
     <script src="./game/game.js"></script>
     <script src="./game/utils.js"></script>
-    <script src="./scene_main/block.js"></script>
-    <script src="./scene_main/paddle.js"></script>
-    <script src="./scene_main/ball.js"></script>
-    <script src="./scene_main/scene.js"></script>
-    <script src="./scene_end/scene_end.js"></script>
+    <script src="./scene/main/block.js"></script>
+    <script src="./scene/main/paddle.js"></script>
+    <script src="./scene/main/ball.js"></script>
+    <script src="./scene/main/scene.js"></script>
+    <script src="./scene/end/scene_end.js"></script>
 
 
 </head>
