--- a/打砖块.html
+++ b/打砖块.html
@@ -20,6 +20,7 @@
     <script src="./scene/main/ball.js"></script>
     <script src="./scene/main/scene.js"></script>
     <script src="./scene/end/scene_end.js"></script>
+    <script src="./scene/title/scene_title.js"></script>
 
 
 </head>
