--- a/打砖块.html
+++ b/打砖块.html
@@ -13,13 +13,18 @@
         }
     </style>
     <script src="./level.js"></script>
+
     <script src="./game/game.js"></script>
+    <script src="./game/four_scene.js"></script>
     <script src="./game/utils.js"></script>
+
     <script src="./scene/main/block.js"></script>
     <script src="./scene/main/paddle.js"></script>
     <script src="./scene/main/ball.js"></script>
     <script src="./scene/main/scene.js"></script>
+
     <script src="./scene/end/scene_end.js"></script>
+
     <script src="./scene/title/scene_title.js"></script>
 
 
