--- a/打砖块.html
+++ b/打砖块.html
@@ -12,19 +12,24 @@
             background-size: 100% 100%;
         }
     </style>
+    <!-- 关卡数据 -->
     <script src="./level.js"></script>
 
+    <!-- 基础游戏数据 -->
     <script src="./game/game.js"></script>
     <script src="./game/four_scene.js"></script>
     <script src="./game/utils.js"></script>
 
+    <!-- 主场景 -->
     <script src="./scene/main/block.js"></script>
     <script src="./scene/main/paddle.js"></script>
     <script src="./scene/main/ball.js"></script>
     <script src="./scene/main/scene.js"></script>
 
+    <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
 
+    <!-- 标题场景 -->
     <script src="./scene/title/scene_title.js"></script>
 
 
