增加载入下一关卡和通关场景

--- a/打砖块/打砖块.html
+++ b/打砖块/打砖块.html
@@ -28,6 +28,7 @@
 
     <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
+    <script src="./scene/end/scene_success.js"></script>
 
     <!-- 标题场景 -->
     <script src="./scene/title/scene_title.js"></script>
