关卡编辑器

--- a/打砖块/打砖块.html
+++ b/打砖块/打砖块.html
@@ -32,6 +32,8 @@
 
     <!-- 标题场景 -->
     <script src="./scene/title/scene_title.js"></script>
+    <script src="./scene/edit/scene_edit.js"></script>
+
 </head>
 
 <body>
