--- a/打飞机/打飞机.html
+++ b/打飞机/打飞机.html
@@ -4,14 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>打砖块</title>
-    <style>
-        canvas {
-            border: 1px black solid;
-            background-image: url(./png/wicher.png);
-            background-size: 100% 100%;
-        }
-    </style>
+    <title>打飞机</title>
     <!-- 关卡数据 -->
     <script src="./level.js"></script>
 
