--- a/打飞机/打飞机.html
+++ b/打飞机/打飞机.html
@@ -13,13 +13,17 @@
     <script src="./game/four_scene.js"></script>
     <script src="./game/utils.js"></script>
     <script src="./game/four_image.js"></script>
-
+    <script src="./game/particle_system.js"></script>
 
     <!-- 主场景 -->
     <script src="./scene/main/block.js"></script>
     <script src="./scene/main/paddle.js"></script>
     <script src="./scene/main/ball.js"></script>
     <script src="./scene/main/scene.js"></script>
+    <script src="./scene/main/enemy.js"></script>
+    <script src="./scene/main/cloud.js"></script>
+    <script src="./scene/main/bullet.js"></script>
+    <script src="./scene/main/player.js"></script>
 
     <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
