--- a/打飞机/打飞机.html
+++ b/打飞机/打飞机.html
@@ -14,6 +14,7 @@
     <script src="./game/utils.js"></script>
     <script src="./game/four_image.js"></script>
     <script src="./game/particle_system.js"></script>
+    <script src="./game/four_lable.js"></script>
 
     <!-- 主场景 -->
     <script src="./scene/main/block.js"></script>
