--- a/打飞机/打飞机.html
+++ b/打飞机/打飞机.html
@@ -15,6 +15,7 @@
     <script src="./game/four_image.js"></script>
     <script src="./game/particle_system.js"></script>
     <script src="./game/four_lable.js"></script>
+    <script src="./game/four_animation.js"></script>
 
     <!-- 主场景 -->
     <script src="./scene/main/block.js"></script>
