--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>打飞机</title>
+    <title>bird</title>
     <!-- 关卡数据 -->
     <script src="./level.js"></script>
 
@@ -16,6 +16,10 @@
     <script src="./game/particle_system.js"></script>
     <script src="./game/four_lable.js"></script>
     <script src="./game/four_animation.js"></script>
+
+    <!-- 配置数据 -->
+    <script src="./config.js"></script>
+
 
     <!-- 主场景 -->
     <script src="./scene/main/block.js"></script>
