--- a/打飞机/打飞机.html
+++ b/打飞机/打飞机.html
@@ -8,6 +8,10 @@
     <!-- 关卡数据 -->
     <script src="./level.js"></script>
 
+    <!-- 配置数据 -->
+    <script src="./config.js"></script>
+
+
     <!-- 基础游戏数据 -->
     <script src="./game/game.js"></script>
     <script src="./game/four_scene.js"></script>
