--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -22,6 +22,7 @@
 
 
     <!-- 主场景 -->
+    <script src="./scene/main/score.js"></script>
     <script src="./scene/main/ground.js"></script>
     <script src="./scene/main/pipes.js"></script>
     <script src="./scene/main/block.js"></script>
