完善标题页面

--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -33,6 +33,7 @@
     <script src="./scene/main/cloud.js"></script>
     <script src="./scene/main/bullet.js"></script>
     <script src="./scene/main/player.js"></script>
+    <script src="./scene/main/icon.js"></script>
 
     <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
