--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bird</title>
-    <!-- 关卡数据 -->
-    <script src="./level.js"></script>
 
     <!-- 基础游戏数据 -->
     <script src="./game/game.js"></script>
@@ -34,6 +32,7 @@
     <script src="./scene/main/bullet.js"></script>
     <script src="./scene/main/player.js"></script>
     <script src="./scene/main/icon.js"></script>
+    <script src="./scene/main/over.js"></script>
 
     <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
