小鸟文件清理

--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -11,7 +11,6 @@
     <script src="./game/four_scene.js"></script>
     <script src="./game/utils.js"></script>
     <script src="./game/four_image.js"></script>
-    <script src="./game/particle_system.js"></script>
     <script src="./game/four_lable.js"></script>
     <script src="./game/four_animation.js"></script>
 
@@ -23,23 +22,17 @@
     <script src="./scene/main/score.js"></script>
     <script src="./scene/main/ground.js"></script>
     <script src="./scene/main/pipes.js"></script>
-    <script src="./scene/main/block.js"></script>
-    <script src="./scene/main/paddle.js"></script>
-    <script src="./scene/main/ball.js"></script>
     <script src="./scene/main/scene.js"></script>
-    <script src="./scene/main/enemy.js"></script>
-    <script src="./scene/main/cloud.js"></script>
-    <script src="./scene/main/bullet.js"></script>
-    <script src="./scene/main/player.js"></script>
     <script src="./scene/main/icon.js"></script>
     <script src="./scene/main/over.js"></script>
 
     <!-- 结束场景 -->
     <script src="./scene/end/scene_end.js"></script>
-    <script src="./scene/end/scene_success.js"></script>
 
     <!-- 标题场景 -->
     <script src="./scene/title/scene_title.js"></script>
+
+    <!-- 编辑场景 -->
     <script src="./scene/edit/scene_edit.js"></script>
 
 </head>
