--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -7,6 +7,7 @@
     <title>bird</title>
 
     <!-- 基础游戏数据 -->
+    <script src="./game/gravity.js"></script>
     <script src="./game/game.js"></script>
     <script src="./game/four_scene.js"></script>
     <script src="./game/utils.js"></script>
