--- a/flappy_bird/flappy_bird.html
+++ b/flappy_bird/flappy_bird.html
@@ -46,18 +46,7 @@
     <!-- <div>
         <textarea name="" id="id-text-log" cols="50" rows="20"></textarea>
     </div> -->
-    <div>
-        <label>
-            <input type="range" 
-            class="four-auto-slider"
-            id=""
-            value=""
-            data-value="config.player_speed"
-            >
-            player speed : <span class="four-label"></span>
-        </label>
-    </div>
-    <div>
+    <!-- <div>
         <label>
             <input type="range" 
             class="four-auto-slider"
@@ -93,6 +82,9 @@
             >
             cloud speed : <span class="four-label"></span>
         </label>
+    </div> -->
+    <div class="four-controls">
+
     </div>
 
     <script src="./main.js"></script>
@@ -107,14 +99,55 @@
                 })
             }
         }
-        binAll(".four-auto-slider", "input", function(event){
+
+        var templateControl = function(key, item) {
+            var t = `
+                    <div class="four-controls">
+                <label>
+                    <input type="range" 
+                    class="four-auto-slider"
+                    id=""
+                    max="300"
+                    min="80"
+                    value="${item.value}"
+                    data-value="config.${key}"
+                    >
+                    ${item._comment}: <span class="four-label"></span>
+                </label>
+            </div>
+            `
+            return t
+        }
+
+        var insertControls = function(){
+            var div = e('.four-controls')
+            var keys = Object.keys(config)
+            for (var k of keys) {
+                var item = config[k]
+                var html = templateControl(k, item)
+                div.insertAdjacentHTML('beforeend', html)
+            }
+        }
+
+        var bindEvents = function() {
+            binAll(".four-auto-slider", "input", function(event){
             var target = event.target
             var bindVar = target.dataset.value
             var v = target.value
-            eval(bindVar + "=" + v)
+            eval(bindVar + ".value =" + v)
             var label = target.closest("label").querySelector(".four-label")
             label.innerText = v
         })
+        }
+
+        var __main = function() {
+            // 从配置文件生产 html 控件
+            insertControls()
+            // 绑定事件
+            bindEvents()
+    }
+
+    __main()
     </script>
 
 </body>
