--- a/Mario/mario.html
+++ b/Mario/mario.html
@@ -8,26 +8,64 @@
 <body>
     <canvas id="id-canvas" width="640" height="640"></canvas>
     <script>
-        // 8x8 像素每个方块
+        // 8x8 像素每个图块
         // 2 bit 每个像素
         // 16 bytes 一个图块
 
         // 每页 8x8 个图块, 就是宽高各 64 像素
         
-        let e = sel => document.querySelector(sel)
-        let log = console.log.bind(console)
+        const e = sel => document.querySelector(sel)
+        const log = console.log.bind(console)
 
-        let ajax = request => {
+        const ajax = request => {
             let r = new XMLHttpRequest()
             r.open("GET", request.url, true)
             r.responseType = "arraybuffer"
             r.onreadystatechange = event => {
                 if (r.readyState == 4) {
-                    request.callback(r.responseType)
+                    request.callback(r.response)
                 }
             }
             
             r.send()
+        }
+
+        const drawBlock = (context, data, x, y, pixelWidth) => {
+            let w = pixelWidth
+            let h = pixelWidth
+
+            for (let i = 0; i < blockSize; i++) {
+                for (let j = 0; j < blockSize; j++) {
+                    // 算出 bytes
+                    let x = j * pixelSize * pixelWidth
+                    let y = i * pixelSize * pixelWidth
+                    let index = (i * 8 + j) * numberOfBytesPerBlock
+                    drawBlock(context, bytes.slice(index), x, y, pixelWidth)
+                }
+            }
+        }
+
+        const drawNes = bytes => {
+            // 78 69
+            // 0100 1110 0100 0101
+
+            let canvas = e('#id-canvas')
+            let context = canvas.getContext('2d')
+
+            let blockSize = 8 // 一个图块是 8 个像素
+            let pixelSize = 8
+            let pixelWidth = 10
+            let numberOfBytesPerBlock = 16
+            // let index = 
+            for (let i = 0; i < blockSize; i++) {
+                for (let j = 0; j < blockSize; j++) {
+                    // 算出 bytes
+                    let x = j * pixelSize * pixelWidth
+                    let y = i * pixelSize * pixelWidth
+                    let index = (i * 8 + j) * numberOfBytesPerBlock
+                    drawBlock(context, bytes.slice(index), x, y, pixelWidth)
+                }
+            }
         }
 
         const __main = () => {
